// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings wallet reducer should handle WALLET_BALANCE 1`] = `
{
  "address": null,
  "addresses": {
    "emptyModel": {
      "address": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "allowances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "spender": null,
      "timestamp": null,
      "token": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "balances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "timestamp": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {
      "null": {
        "amount": "5",
        "id": null,
        "timestamp": null
      }
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isSelected": false,
  "isTIMERequired": true,
  "timeAddress": null,
  "timestamp": null,
  "tokens": {
    "TK1": {
      "address": null,
      "balance": "0",
      "blockchain": null,
      "dao": null,
      "decimals": 0,
      "fee": {
        "fee": null,
        "feeAddress": null,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isInited": false,
        "isPending": false,
        "isSelected": false,
        "timestamp": null,
        "transactionHash": null,
        "withFee": null
      },
      "feeRate": null,
      "icon": null,
      "id": null,
      "isERC20": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isLocked": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isInited": false,
        "isPending": false,
        "isSelected": false,
        "timestamp": null,
        "transactionHash": null,
        "value": null
      },
      "isSelected": false,
      "managersList": {
        "emptyModel": {
          "address": null,
          "id": null,
          "isFailed": false,
          "isFetched": false,
          "isFetching": false,
          "isInited": false,
          "isPending": false,
          "isSelected": false,
          "timestamp": null,
          "transactionHash": null
        },
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isInited": false,
        "isPending": false,
        "isSelected": false,
        "leftToFetch": 0,
        "list": {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null
      },
      "name": null,
      "platform": null,
      "symbol": "TK1",
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "url": null
    }
  },
  "transactionHash": null,
  "transactions": {
    "emptyModel": {
      "args": null,
      "blockHash": null,
      "blockNumber": null,
      "by": null,
      "credited": null,
      "fee": "0",
      "from": null,
      "gas": null,
      "gasFee": "0",
      "gasPrice": null,
      "id": null,
      "input": null,
      "symbol": "",
      "time": null,
      "timestamp": null,
      "to": null,
      "token": null,
      "tokenAddress": null,
      "transactionIndex": null,
      "txHash": null,
      "type": "",
      "value": "0"
    },
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  }
}
`;

exports[`settings wallet reducer should handle WALLET_IS_TIME_REQUIRED 1`] = `
{
  "address": null,
  "addresses": {
    "emptyModel": {
      "address": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "allowances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "spender": null,
      "timestamp": null,
      "token": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "balances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "timestamp": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isSelected": false,
  "isTIMERequired": false,
  "timeAddress": null,
  "timestamp": null,
  "tokens": {},
  "transactionHash": null,
  "transactions": {
    "emptyModel": {
      "args": null,
      "blockHash": null,
      "blockNumber": null,
      "by": null,
      "credited": null,
      "fee": "0",
      "from": null,
      "gas": null,
      "gasFee": "0",
      "gasPrice": null,
      "id": null,
      "input": null,
      "symbol": "",
      "time": null,
      "timestamp": null,
      "to": null,
      "token": null,
      "tokenAddress": null,
      "transactionIndex": null,
      "txHash": null,
      "type": "",
      "value": "0"
    },
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  }
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTION 1`] = `
{
  "address": null,
  "addresses": {
    "emptyModel": {
      "address": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "allowances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "spender": null,
      "timestamp": null,
      "token": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "balances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "timestamp": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isSelected": false,
  "isTIMERequired": true,
  "timeAddress": null,
  "timestamp": null,
  "tokens": {},
  "transactionHash": null,
  "transactions": {
    "emptyModel": {
      "args": null,
      "blockHash": null,
      "blockNumber": null,
      "by": null,
      "credited": null,
      "fee": "0",
      "from": null,
      "gas": null,
      "gasFee": "0",
      "gasPrice": null,
      "id": null,
      "input": null,
      "symbol": "",
      "time": null,
      "timestamp": null,
      "to": null,
      "token": null,
      "tokenAddress": null,
      "transactionIndex": null,
      "txHash": null,
      "type": "",
      "value": "0"
    },
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {
      "hash1 - 1 - 2": {
        "args": null,
        "blockHash": null,
        "blockNumber": 10,
        "by": null,
        "credited": null,
        "fee": "0",
        "from": 1,
        "gas": null,
        "gasFee": "0",
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": "",
        "time": null,
        "timestamp": null,
        "to": 2,
        "token": null,
        "tokenAddress": null,
        "transactionIndex": null,
        "txHash": "hash1",
        "type": "",
        "value": "0"
      }
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  }
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS 1`] = `
{
  "address": null,
  "addresses": {
    "emptyModel": {
      "address": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "allowances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "spender": null,
      "timestamp": null,
      "token": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "balances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "timestamp": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isSelected": false,
  "isTIMERequired": true,
  "timeAddress": null,
  "timestamp": null,
  "tokens": {},
  "transactionHash": null,
  "transactions": true
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS_FETCH 1`] = `
{
  "address": null,
  "addresses": {
    "emptyModel": {
      "address": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "allowances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "spender": null,
      "timestamp": null,
      "token": null,
      "transactionHash": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "balances": {
    "emptyModel": {
      "amount": "0",
      "id": null,
      "timestamp": null
    },
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isSelected": false,
  "isTIMERequired": true,
  "timeAddress": null,
  "timestamp": null,
  "tokens": {},
  "transactionHash": null,
  "transactions": {
    "emptyModel": {
      "args": null,
      "blockHash": null,
      "blockNumber": null,
      "by": null,
      "credited": null,
      "fee": "0",
      "from": null,
      "gas": null,
      "gasFee": "0",
      "gasPrice": null,
      "id": null,
      "input": null,
      "symbol": "",
      "time": null,
      "timestamp": null,
      "to": null,
      "token": null,
      "tokenAddress": null,
      "transactionIndex": null,
      "txHash": null,
      "type": "",
      "value": "0"
    },
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {
      "a": 1
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null
  }
}
`;
